gcc/testsuite/rust/rustc/ui/parser/issues/misplaced-return-type-where-in-next-line-issue-126311.rs
fn foo<T, K>()
// { help "" "" { target *-*-* } .-1 }
where
    T: Default,
    K: Clone, -> Result<u8, String>
// { dg-error "" "" { target *-*-* } .-1 }
{
    Ok(0)
}

fn main() {}

